[package]
name = "ff-backend-valkey"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric EngineBackend impl — Valkey FCALL backend"

[features]
# RFC-012 Stage 1c tranche-4 (#87) — mirror ff-core's `streaming`
# feature so the backend's `read_stream` / `tail_stream` impls land
# only when the trait surface declares them. Default-on tracks
# ff-core's default.
default = ["streaming"]
streaming = ["ff-core/streaming"]

[dependencies]
ff-core = { workspace = true }
ff-script = { workspace = true }
ferriskey = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
# RFC-012 Stage 1b — `fail_impl` reads the execution's retry policy
# JSON and serialises the nested `retry_policy` field into an
# FCALL ARGV. Mirrors ff-sdk's pre-migration `read_retry_policy_json`.
serde_json = { workspace = true }
# Issue #90 — `CompletionBackend` impl spawns a subscriber task and
# forwards parsed payloads over mpsc; `futures-core::Stream` for the
# receiver→stream adapter. `serde` for the wire-payload Deserialize
# derive.
tokio = { workspace = true }
futures-core = { workspace = true }
serde = { workspace = true }
