[package]
name = "ff-backend-valkey"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric EngineBackend impl — Valkey FCALL backend"

[features]
# RFC-012 Stage 1c tranche-4 (#87) — mirror ff-core's `streaming`
# feature so the backend's `read_stream` / `tail_stream` impls land
# only when the trait surface declares them. Default-on tracks
# ff-core's default.
default = ["streaming"]
streaming = ["ff-core/streaming"]
# Issue #154 — enable real OTEL metric emission via `ff-observability`.
# Off by default: the `ff-observability` dep is always present (no-op
# shim compiles to zero-cost no-ops), and turning this feature on
# flips the shim to the real OTEL/Prometheus-backed implementation.
# Mirrors `ff-engine` / `ff-scheduler` observability features.
observability = ["ff-observability/enabled"]

[dependencies]
ff-core = { version = "0.14.1", path = "../ff-core", default-features = false, features = ["core", "suspension"] }
# Issue #154 — metric emission on `EngineBackend` impls. Always-present
# so no cfg-gated field on `ValkeyBackend`; the `observability` feature
# selects shim vs. real OTEL implementation.
ff-observability = { workspace = true }
# Issue #171: `ff-backend-valkey` IS the Valkey backend — always needs
# ff-script's ferriskey-gated surface (loader, functions, result parsers,
# retry classification, `ScriptError::Valkey`). Explicit feature activation
# so the dep stays correct even if ff-script's defaults change.
ff-script = { workspace = true, features = ["valkey-client"] }
# RFC-017 Stage C — `claim_for_worker` trait impl forwards to
# `ff_scheduler::Scheduler`. Wired via `ValkeyBackend::with_scheduler`
# before the backend is sealed behind `Arc<dyn EngineBackend>`.
ff-scheduler = { workspace = true }
ferriskey = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
# RFC-012 Stage 1b — `fail_impl` reads the execution's retry policy
# JSON and serialises the nested `retry_policy` field into an
# FCALL ARGV. Mirrors ff-sdk's pre-migration `read_retry_policy_json`.
serde_json = { workspace = true }
# Issue #90 — `CompletionBackend` impl spawns a subscriber task and
# forwards parsed payloads over mpsc; `futures-core::Stream` for the
# receiver→stream adapter. `serde` for the wire-payload Deserialize
# derive.
tokio = { workspace = true }
futures-core = { workspace = true }
# RFC-019 Stage A — `subscribe_lease_history` spawns a bg XREAD loop
# and forwards parsed `StreamEvent`s over mpsc; `ReceiverStream` is
# the bounded-mpsc→`Stream` adapter.
tokio-stream = { workspace = true, features = ["sync"] }
bytes = { workspace = true }
# RFC-017 Stage B — bounded-parallel fan-out of the
# `rotate_waitpoint_hmac_secret_all` FCALL (moved from
# `ff-server::Server::rotate_waitpoint_secret` per §4 row 11).
futures = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
# RFC-019 Stage C — integration tests construct synthetic events with
# real UUIDs so the typed-event decoder asserts on the exact ids we
# wrote back.
uuid = { workspace = true }
