[package]
name = "ff-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric client SDK — submit, inspect, and signal workflows from non-worker Rust code (admin tools, FFI bindings, CLIs)."
# v0 / foundation: surface is still maturing (submit, inspect,
# result, cancel, read_context shipped; no list/signal yet). Keep
# off crates.io until the API stabilises. Flip to publishable AND
# add to the release.yml / release.toml / RELEASING.md /
# matrix.yml feature-propagation sources of truth (the
# publish-list-lint CI gate enforces this in lockstep).
publish = false

[dependencies]
ff-core = { workspace = true }
ff-backend-valkey = { workspace = true }
ff-script = { workspace = true, features = ["valkey-client"] }
ferriskey = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# Only used by examples/gen_cross_lang_corpus.rs to emit JSON the
# Python tests read back. Not part of the runtime surface.
serde_json = { workspace = true }
