[package]
name = "ff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric core types, partition math, key builders, error codes"

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc16 = { workspace = true }

[dev-dependencies]
