[package]
name = "ff-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric core types, partition math, key builders, error codes"

[features]
# RFC-012 Stage 1c tranche-1 scaffold: backend-implementer feature
# surface. `default = [all]` means consumer crates (ff-sdk and
# downstream) see the full trait with zero toggles. Backend crates may
# opt into a strict subset; a `default-features = false` dependency
# with, say, `features = ["core"]` will in later tranches see a
# trait slice without streaming / suspension / budget methods.
#
# Tranche 1 only declares the feature names — the `EngineBackend`
# trait does not yet carry `#[cfg(feature = "…")]` gates on any
# method. Tranches 2-5 land the gates as each method migrates. All
# feature bodies are intentionally empty here.
#
# Grouping rationale (per plan §Trait feature-gate strategy): names
# track storage primitives, not consumer APIs — primitives change
# slower than APIs, which keeps the cfg-gate topology stable.
default = ["core", "streaming", "suspension", "budget"]
core = []
streaming = []
suspension = []
budget = []
# Exposes `handle_codec::v1_handle_for_tests` — a pre-Wave-1c (v1)
# byte producer used by cross-version compat tests in downstream
# consumers (e.g. cairn #323) to verify that HandleCodec::decode
# still handles event-log handles persisted under FF 0.3. Default
# OFF so the fixture never leaks into production builds.
test-fixtures = []

[dependencies]
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc16 = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
tokio = { workspace = true, features = ["time"] }
# RFC-019 Stage A — opaque stream cursor + event payload bytes, plus
# `tokio_stream::Stream` for the `EngineBackend::subscribe_*` type alias.
bytes = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
