[package]
name = "ff-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric observability — OTEL metrics registry + typed handles + no-op shim"

[features]
# OFF by default. When OFF, the crate compiles down to zero-cost
# no-op shims — none of the OTEL / Prometheus deps are pulled in.
# Enabled transitively through `ff-server/observability`,
# `ff-engine/observability`, `ff-scheduler/observability`.
default = []
enabled = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-prometheus",
    "dep:prometheus",
]

[dependencies]
# Exact-patch pins per PR-94 plan §3. OTEL had breaking changes on
# minor versions before 0.27 stabilized; caret-ranges would let a
# downstream bump silently break compilation. Re-pin deliberately
# when upgrading.
opentelemetry = { version = "=0.27.1", default-features = false, features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "=0.27.1", default-features = false, features = ["metrics"], optional = true }
opentelemetry-prometheus = { version = "=0.27.0", optional = true }
prometheus = { version = "=0.13.4", default-features = false, optional = true }
