[package]
name = "ff-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric claim-grant scheduler"

[dependencies]
ff-core = { workspace = true }
ff-script = { workspace = true }
ferriskey = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
