[package]
name = "ff-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric claim-grant scheduler"

[features]
# PR-94: opt in to OTEL-backed scheduler metrics (claim_from_grant
# latency, budget/quota hits). OFF by default.
observability = ["ff-observability/enabled"]

[dependencies]
ff-core = { workspace = true }
ff-script = { workspace = true }
ff-observability = { workspace = true }
ferriskey = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
