[package]
name = "ff-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric claim-grant scheduler"

[features]
# PR-94: opt in to OTEL-backed scheduler metrics (claim_from_grant
# latency, budget/quota hits). OFF by default.
observability = ["ff-observability/enabled"]

[dependencies]
ff-core = { version = "0.11.0", path = "../ff-core", default-features = false, features = ["core"] }
# Issue #171: ff-scheduler's claim dispatcher uses FCALL helpers from
# ff-script, so explicitly enable `valkey-client`.
ff-script = { workspace = true, features = ["valkey-client"] }
ff-observability = { workspace = true }
ferriskey = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
