[package]
name = "ff-script"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric typed FCALL wrappers and Lua library loader"

[dependencies]
ff-core = { workspace = true }
ferriskey = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
