[package]
name = "ff-script"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "FlowFabric typed FCALL wrappers and Lua library loader"

[dependencies]
# RFC-012 feature-gate discipline (#164, completes #158): default-features
# disabled so ff-script does not re-enable ff-core's `streaming` /
# `suspension` / `budget` feature flags for downstream consumers
# (notably ff-sdk `--no-default-features`). ff-script touches only the
# always-on surface (`contracts`, `keys`, `types`, `error`, `state`,
# `partition`, `engine_error`); `core` is requested explicitly so the
# dep stays correct if gates migrate onto those modules.
ff-core = { version = "0.5.0", path = "../ff-core", default-features = false, features = ["core"] }
ferriskey = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time"] }
